--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="download__text">
             <div>Цены на ПК, комплектующие, переферию и работу</div>
         </div>
-        <a href="files/price-list.pdf" class="catalog__button btn" download="">СКАЧАТЬ</a>
+        <a href="price-list.pdf" class="catalog__button btn" download="">СКАЧАТЬ</a>
     </div>
 </div>
 
