--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             ЗАПИШИСЬ НА БЕСПЛАТНУЮ
             КОНСУЛЬТАЦИЮ!</h1>
 
-            <form action="file:///C:/Users/admin/Desktop/WEB/Code/index.html" method="post" class="intro__subscription">
+            <form method="post" class="intro__subscription">
                 <div class="subscription__inner">
                     <input type="email" class="subscription__email" placeholder="Введите свой email." required id="subscription-email">
                 </div>
@@ -58,37 +58,37 @@
 <div id="nav1" class="container">
     <div class="advantages">
         <div class="advantages__item">
-            <img class="advantages__icon" src="img/advantages/adv-1.svg" alt="">
+            <img class="advantages__icon" src="adv-1.svg" alt="">
             <h4 class="advantages__title">КАЧЕСТВО</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="img/advantages/adv-2.svg" alt="">
+            <img class="advantages__icon" src="adv-2.svg" alt="">
             <h4 class="advantages__title">СКОРОСТЬ</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="img/advantages/adv-3.svg" alt="">
+            <img class="advantages__icon" src="adv-3.svg" alt="">
             <h4 class="advantages__title">ГАРАНТИЯ</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="img/advantages/adv-4.svg" alt="">
+            <img class="advantages__icon" src="adv-4.svg" alt="">
             <h4 class="advantages__title">СЕРТИФИЦИРОВАННЫЕ МАСТЕРА</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="img/advantages/adv-5.svg" alt="">
+            <img class="advantages__icon" src="iadv-5.svg" alt="">
             <h4 class="advantages__title">МЕСТОПОЛОЖЕНИЕ</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="img/advantages/adv-6.svg" alt="">
+            <img class="advantages__icon" src="/adv-6.svg" alt="">
             <h4 class="advantages__title">ОБСЛУЖИВАНИЕ</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
@@ -99,28 +99,28 @@
 <!--Works-->
 <div id="nav3" class="works">
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-1.jpg" alt="">
+        <img class="works__photo" src="work-1.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-2.jpg" alt="">
+        <img class="works__photo" src="work-2.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-3.jpg" alt="">
+        <img class="works__photo" src="work-3.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-4.jpg" alt="">
+        <img class="works__photo" src="work-4.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-5.jpg" alt="">
+        <img class="works__photo" src="work-5.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-6.jpg" alt="">
+        <img class="works__photo" src="work-6.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-7.jpg" alt="">
+        <img class="works__photo" src="work-7.jpg" alt="">
     </div>
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-8.jpg" alt="">
+        <img class="works__photo" src="work-8.jpg" alt="">
     </div>
 </div>
 
@@ -131,52 +131,52 @@
     </div>
     <div class="catalog">
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
         <div class="catalog__item">
-            <img class="catalog__icon" src="img/catalog/product-1.svg" alt="">
+            <img class="catalog__icon" src="product-1.svg" alt="">
             <h4 class="catalog__title">Компьютер</h4>
             <button class="catalog__button btn" type="button">Купить</button>
         </div>
