--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="iadv-5.svg" alt="">
+            <img class="advantages__icon" src="adv-5.svg" alt="">
             <h4 class="advantages__title">МЕСТОПОЛОЖЕНИЕ</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
 
         <div class="advantages__item">
-            <img class="advantages__icon" src="/adv-6.svg" alt="">
+            <img class="advantages__icon" src="adv-6.svg" alt="">
             <h4 class="advantages__title">ОБСЛУЖИВАНИЕ</h4>
             <div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nobis recusandae, accusantium sed tempore, minima quibusdam quo rem quam ab molestias doloribus fuga harum. Expedita nulla minus non numquam quam.</div>
         </div>
